// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note should render Note with full props 1`] = `
<tr
  className="jsx-2376464361"
>
  <td
    className="jsx-2376464361"
    style={
      Object {
        "textAlign": "center",
        "width": 200,
      }
    }
  >
    <div
      className="col"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Oct 2nd 2018
    </div>
  </td>
  <td
    className="jsx-2376464361"
  >
    <div
      className="jsx-2376464361 row"
    >
      <div
        className="col"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        Test note
      </div>
    </div>
  </td>
  <td
    className="jsx-2376464361"
  >
    Admin Test
  </td>
</tr>
`;

exports[`Note should render Note with some props 1`] = `
<tr
  className="jsx-2376464361"
>
  <td
    className="jsx-2376464361"
    style={
      Object {
        "textAlign": "center",
        "width": 200,
      }
    }
  >
    <div
      className="col"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      Oct 2nd 2018
    </div>
  </td>
  <td
    className="jsx-2376464361"
  >
    <div
      className="jsx-2376464361 row"
    >
      <div
        className="col"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </td>
  <td
    className="jsx-2376464361"
  />
</tr>
`;
